--- a/SpaceWay/Views/Passengers/Search.cshtml
+++ b/SpaceWay/Views/Passengers/Search.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    @Html.ActionLink("Display Passenger's Destinations", "JoinPassengersAndDestinations")
+    @Html.ActionLink("Display Passengers' Destinations", "JoinPassengersAndDestinations")
 <div>
     <fieldset id="search">
         <label>Filter by:</label><br />
