--- a/SpaceWay/Views/Shared/NotLoggedInNavBar.cshtml
+++ b/SpaceWay/Views/Shared/NotLoggedInNavBar.cshtml
@@ -1,17 +1,17 @@
-﻿
-
-@*<a class="navbar-brand js-scroll-trigger" href='@Url.Action("Index", "Home")'>Home</a>*@
+﻿@*<a class="navbar-brand js-scroll-trigger" href='@Url.Action("Index", "Home")'>Home</a>*@
 @*<li class="nav-item">
-    <a class="nav-link fa-toggle-left js-scroll-trigger" href='@Url.Action("Index", "Home")'>Home</a>
-</li>*@
-
-<li class="nav-item">
-    <a class="nav-link js-scroll-trigger" href='@Url.Action("Create", "Passengers")'>Sign-up</a>
-    @*<input type="button" class="btn btn-info" value="Sign up" onclick="location.href='@Url.Action("Create", "Passengers")'" />*@
-</li>
-<li class="nav-item">
-    <a class="nav-link js-scroll-trigger" href='@Url.Action("Login", "Passengers")'>Login</a>
-    @*<input type="button" class="btn btn-info" value="Sign up" onclick="location.href='@Url.Action("Create", "Passengers")'" />*@
-</li>
-@*<li>@Html.ActionLink("Register", "Create", "Passengers")</li>
-<li>@Html.ActionLink("Login", "Login", "Passengers")</li>*@
+        <a class="nav-link fa-toggle-left js-scroll-trigger" href='@Url.Action("Index", "Home")'>Home</a>
+    </li>*@
+    <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href='@Url.Action("Index", "Home")'><b>Home</b></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href='@Url.Action("Create", "Passengers")'>Sign-up</a>
+        @*<input type="button" class="btn btn-info" value="Sign up" onclick="location.href='@Url.Action("Create", "Passengers")'" />*@
+    </li>
+    <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href='@Url.Action("Login", "Passengers")'>Login</a>
+        @*<input type="button" class="btn btn-info" value="Sign up" onclick="location.href='@Url.Action("Create", "Passengers")'" />*@
+    </li>
+    @*<li>@Html.ActionLink("Register", "Create", "Passengers")</li>
+        <li>@Html.ActionLink("Login", "Login", "Passengers")</li>*@
