--- a/SpaceWay/Views/Home/Index.cshtml
+++ b/SpaceWay/Views/Home/Index.cshtml
@@ -32,21 +32,22 @@
 </head>
 
 
-<body id="page-top " @*onload="canvasFunc()"*@ onload="initialize()">
+<body id="page-top" onload="canvasFunc()" >
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
             src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v4.0&appId=355721755360451&autoLogAppEvents=1"></script>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href='@Url.Action("Index", "Home")'>Home</a>
+            
             <button class="navbar-toggler navbar-toggler-right" type="button" href="~/Views" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    @if (Session["Username"] == null)
+                    @{
+                        if (Session["Username"] == null)
                         {
                             Html.RenderPartial("NotLoggedInNavBar");
                         }
@@ -54,16 +55,16 @@
                         {
                             Html.RenderPartial("LoggedInNavBar");
                         }
-                    
+                    }
                     @*<li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#projects">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
-                        </li>*@
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+        </li>*@
                 </ul>
             </div>
         </div>
@@ -75,14 +76,14 @@
             <div class="mx-auto text-center">
                 <h1 class="mx-auto my-0 text-uppercase">SpaceWay</h1>
                 <aside>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Leave Earth with ease.</h2>
+                    <h2 id="slogan" class="text-white-50 mx-auto mt-2 mb-5">Leave Earth with ease.</h2>
                 </aside>
 
                 @if (Session["Username"] == null)
                 {
                     <a href='@Url.Action("Create", "Passengers")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>//if not logged in
                 }
-                 
+
                 else
                 {
                     <a href='@Url.Action("SearchFlight", "Flights")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>//if logged in
@@ -227,7 +228,7 @@
 
 
 
-                    <video width="700" height="400" src="~/Content/Images/video.mp4" title="Explore the amazing space" controls />
+                    <video class="video" width="700" height="400" src="~/Content/Images/video.mp4" title="Explore the amazing space" controls />
                     @*<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
