--- a/SpaceWay/Views/Home/Nasa.cshtml
+++ b/SpaceWay/Views/Home/Nasa.cshtml
@@ -4,12 +4,13 @@
 
 <h2 class="text-white mb-4">NASA Astronomy Picture Of The Day</h2>
 <h2 class="text-white mb-4" id="title"></h2>
-<div>
+<div class="nasa">
     <hr />
     <dl class="dl-horizontal">
         <dt>
             <h3>Date: <span id="date"></span></h3><br />
             <img id="img" src="" alt="NASA Picture Of The Day" height="50%" width="50%"><br />
+
             <p id="explanation"></p><br />
         </dt>
     </dl>
