--- a/SpaceWay/Views/Reservations/AdminCreate.cshtml
+++ b/SpaceWay/Views/Reservations/AdminCreate.cshtml
@@ -22,34 +22,18 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.OrderDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextBoxFor(model => model.OrderDate, new { type = "date" })
             @Html.ValidationMessageFor(model => model.OrderDate, "", new { @class = "text-danger" })
         </div>
-    </div>
-
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.OutboundID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OutboundID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OutboundID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.InboundID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.InboundID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InboundID, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.OutboundID, "OutboundID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("FlightID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("OutboundID",(IEnumerable<SelectListItem>)ViewBag.FlightID, null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.OutboundID, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -57,7 +41,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.InboundID, "InboundID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("FlightID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("InboundID", (IEnumerable<SelectListItem>)ViewBag.FlightID, null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.InboundID, "", new { @class = "text-danger" })
         </div>
     </div>
