--- a/SpaceWay/Views/Flights/Create.cshtml
+++ b/SpaceWay/Views/Flights/Create.cshtml
@@ -66,8 +66,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Departure, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Departure, new { htmlAttributes = new { @class = "form-control" } })
-                @*<input asp-for="Departure" class="form-control" />*@
+                @*@Html.EditorFor(model => model.Departure, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.TextBoxFor(model => model.Departure, new { type = "date" })
                 @Html.ValidationMessageFor(model => model.Departure, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Arrival, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Arrival, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.Arrival, new { type = "date" })
                 @Html.ValidationMessageFor(model => model.Arrival, "", new { @class = "text-danger" })
             </div>
         </div>
