--- a/SpaceWay/Views/Passengers/Edit.cshtml
+++ b/SpaceWay/Views/Passengers/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("PassengerEdit","Passengers",FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
