--- a/SpaceWay/Views/Shared/LoggedInNavBar.cshtml
+++ b/SpaceWay/Views/Shared/LoggedInNavBar.cshtml
@@ -55,7 +55,7 @@
     </li>
 }
 <li class="nav-item">
-    <a class="nav-link js-scroll-trigger" href='@Url.Action("Nasa", "Home")'>Picture Of The Day</a>
+    <a class="nav-link js-scroll-trigger" href='@Url.Action("Nasa", "Home")'>Pic Of The Day</a>
 </li>
 <li class="nav-item">
     <a class="nav-link js-scroll-trigger"></a>
