--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -14,6 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <br/>
                     <h4>Book A Flight</h4>
                     <hr />
                 </div>
@@ -21,6 +22,7 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
+                        <label>Aircraft's level:</label>
                         <select class = "form-control" id="lvl" name="lvl">
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -32,43 +34,44 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                    @Html.DropDownList("OriginID", null, htmlAttributes: new { @class = "form-control" })
+                        <label>Origin:</label>
+                        @Html.DropDownList("OriginID", null, htmlAttributes: new { @class = "form-control" })
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                    @Html.DropDownList("DestinationID", null, htmlAttributes: new { @class = "form-control" })
+                        <label>Destination:</label>
+                        @Html.DropDownList("DestinationID", null, htmlAttributes: new { @class = "form-control" })
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                    <input id="departure" name="departure" type="date" />
+                        <label>Outbound Date:</label><br />
+                        <input id="departure" name="departure" type="date" />
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                    <input id="arrival" name="arrival" type="date" />
+                        <label>Inbound Date:</label><br/>
+                        <input id="arrival" name="arrival" type="date" />
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-offset-2 col-md-10">
                     <div class="form-group">
-                    <input type="submit" value="Search Flight" class="btn btn-default" />
+                        <br />
+                        <input type="submit" value="Search Flight" class="btn btn-default" />
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-    @Html.ActionLink("Back to List", "Index")
-                </div>
-            </div>
+         
         </div>
         <div class="form-group">
         </div>
