--- a/SpaceWay/Views/Stations/Index.cshtml
+++ b/SpaceWay/Views/Stations/Index.cshtml
@@ -3,48 +3,54 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-@using (Html.BeginForm("Search", "Stations", FormMethod.Post))
+@if ((string)Session["isAdmin"] == "0" || Session["Username"] == null)
 {
-    <input type="text" name="planet" />
-    <button type="submit">Filter</button>
+    <h4>You have no permissions to display this page.</h4>
 }
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Planet)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
+else
+{
+    <h2>Index</h2>
+    using (Html.BeginForm("Search", "Stations", FormMethod.Post))
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Planet)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.StationID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.StationID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.StationID })
-            </td>
-        </tr>
+        <input type="text" name="planet" />
+        <button type="submit">Filter</button>
     }
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Planet)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th></th>
+        </tr>
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Planet)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.StationID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.StationID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.StationID })
+                </td>
+            </tr>
+        }
+
+    </table>
+}
