--- a/SpaceWay/Views/Home/Index.cshtml
+++ b/SpaceWay/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@
                 else
                 {
                     //if logged in
-                    <a href='@Url.Action("SearchFlight", "Flights")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>
+                    <a href='@Url.Action("LearnFromStatistics", "Flights")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>
                 }
 
             </div>
