--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "SearchFlight";
 }
 
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -77,9 +78,33 @@
         </div>
     </div>
 }
+<link href="~/Content/css/popUp.css" rel="stylesheet" />
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header" >
+                <span class="close">&times;</span>
+                <p ><b>Today's Special Offer</b></p>
+            </div>
+            <div class="modal-body">
+                <h3><b>Take a Flight to</b></h3>
+                <h3><b>@ViewBag.FaveStation</b></h3>
+                <p><b>and you won't gonna regret it</b></p>
+            </div>
+            <div class="modal-footer">
+                <p ><b>Don't Miss It !!</b></p>
+            </div>
+        </div>
+    </div>
+
+    @section Scripts {
+<script src="~/Content/js/popUp.js"></script>
+<script>if ('@ViewBag.FaveStation') {popUp(); }</script>
+
+@Scripts.Render("~/bundles/jqueryval")
+        
+    }
 
